# rs-floppoker

./: .gitignore  Cargo.toml
src/: dealer.rs  deck.rs  lib.rs  player.rs
